# tato

./: package-lock.json  package.json
firmware/: .gitignore  (+5 more)
firmware/main/: .clang-format  CMakeLists.txt  Kconfig.projbuild  component.mk  delay.cpp  main.c  main.cpp  utils.h  webserver.c  webserver.h
firmware/main/delay/: delay.h
firmware/main/drivers/controls/: controls.c  controls.h
firmware/main/drivers/i2c/: i2c_driver.c  i2c_driver.h
firmware/main/drivers/pwm/: pwm_driver.c  pwm_driver.h
firmware/main/drivers/spi/: spi_driver.c  spi_driver.h
firmware/main/modules/adxl345/: adxl345_driver.c  adxl345_driver.h
firmware/main/modules/bme68x/: bme68x_driver.c  bme68x_driver.h
firmware/main/modules/client/: client.c  client.h
firmware/main/modules/display/: display_manager.c  display_manager.h
firmware/main/modules/dwm/: dwm_manager.c  dwm_manager.h
firmware/main/modules/m24lr/: m24lr_driver.c  m24lr_driver.h
firmware/main/modules/max/: max_driver.c  max_driver.h
firmware/main/modules/neopixel/: led_types.h  neopixel_driver.c  neopixel_driver.h
firmware/main/modules/ota/: ota.c  ota.h
firmware/main/modules/storage/: storage.c  storage.h
firmware/main/modules/wifi/: wifi.c  wifi.h
firmware/main/screens/badge/: badge.c  badge.h  badge_defines.h
firmware/main/screens/badge_test/: badge_test.c  badge_test.h
firmware/main/screens/configuration_menu/: configuration_menu.c  configuration_menu.h
firmware/main/tcp/: tcp.cpp  tcp.h
firmware/main/utilities/: error_manager.h  utilities.c  utilities.h
firmware/main/wifi/: wifi.cpp  wifi.h
(+51 files in other folders)
